--- a/fr v2/compétences.html
+++ b/fr v2/compétences.html
@@ -3,15 +3,13 @@
 <!--[if IE 9 ]><html lang="fr" class="no-js ie9"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
 
-<!-- Main Values / Apport pro / Apport perso -->
-
 <html lang="fr">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Apports | Emmanuel HALTER
+			  Compétences | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/apports.css">
+		<link rel="stylesheet" type="text/css" href="css/competences.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -59,7 +57,11 @@
 	</nav>	
 </header>
 <div class="content">
-	<img alt="apports" src="images/apportsTest.png"/>
+		<section>
+			<h1>Niveau</h1>
+			<canvas id="tSkills" width="700" height="350">[No canvas support]</canvas>
+			<canvas id="fSkills" width="700" height="350">[No canvas support]</canvas>
+		</section>
 </div>
 <footer>
 		<section id="footerbox-network">
