--- a/fr v2/futur.html
+++ b/fr v2/futur.html
@@ -3,15 +3,13 @@
 <!--[if IE 9 ]><html lang="fr" class="no-js ie9"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
 
-<!-- Main Values / Apport pro / Apport perso -->
-
 <html lang="fr">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Apports | Emmanuel HALTER
+			  Projets futurs | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/apports.css">
+		<link rel="stylesheet" type="text/css" href="css/futur.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -31,10 +29,10 @@
 		</section>
 	</div>
 	<div class="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/profil.html">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/projets.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/profile.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/project.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
 	</div>
@@ -59,7 +57,15 @@
 	</nav>	
 </header>
 <div class="content">
-	<img alt="apports" src="images/apportsTest.png"/>
+	<h1>Projets futurs</h1>
+	<article>
+		<p>Bien que junior sur le marché du travail, j'ai déjà une bonne idée dans la voie sur laquelle je veux m'orienter à moyen terme (&asymp; 3/4 ans).</p>
+		<p>Voici les deux axes sur lesquels je veux partir.</p>
+	</article>
+	<section>
+		<img alt="Business Analyste" src="images/banalyst.png"/>
+		<img alt="A l'étranger" src="images/abroad.png"/>
+	</section>
 </div>
 <footer>
 		<section id="footerbox-network">
@@ -89,17 +95,6 @@
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script src="js/profil.js"></script>
-<script src="js/RGraph/libraries/RGraph.common.core.js"></script>
-		<script src="js/RGraph/libraries/RGraph.common.dynamic.js"></script>   <!-- Just needed for dynamic features (eg tooltips) -->
-
-		<script src="js/RGraph/libraries/RGraph.common.annotate.js"></script>  <!-- Just needed for annotating -->
-		<script src="js/RGraph/libraries/RGraph.common.context.js"></script>   <!-- Just needed for context menus -->
-		<script src="js/RGraph/libraries/RGraph.common.effects.js"></script>   <!-- Just needed for visual effects -->
-		<script src="js/RGraph/libraries/RGraph.common.key.js"></script>       <!-- Just needed for keys -->
-		<script src="js/RGraph/libraries/RGraph.common.resizing.js"></script>  <!-- Just needed for resizing -->
-		<script src="js/RGraph/libraries/RGraph.common.tooltips.js"></script>  <!-- Just needed for tooltips -->
-		<script src="js/RGraph/libraries/RGraph.common.zoom.js"></script>   
-		<script src="js/RGraph/libraries/RGraph.radar.js"></script>  	
+<script src="js/myJScript.js"></script>	
 </body>
 </html>
