--- a/fr v2/histoire.html
+++ b/fr v2/histoire.html
@@ -7,9 +7,9 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Amis | Emmanuel HALTER
+			  Histoire | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/amis.css">
+		<link rel="stylesheet" type="text/css" href="css/histoire.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png"/>
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
