--- a/fr v2/amis.html
+++ b/fr v2/amis.html
@@ -37,12 +37,17 @@
 		</a>
 	</div>
 	<nav>
-		<ul id="menu-ul">
+		<ul id="menu">
 			<li>
 				<a href="http://ehalter.com">Accueil</a>
 			</li>
 			<li>
 				<a href="http://ehalter.com/profil.html">Profil</a>
+				<ul>
+					<li><a href="http://ehalter.com/interets.html">CV</a></li>
+					<li><a href="http://ehalter.com/interets.html">Compétences principales</a></li>
+					<li><a href="http://ehalter.com/interets.html">Apports</a></li>
+				</ul>
 			</li>
 			<li>
 				<a href="http://ehalter.com/interets.html">Interets</a>
@@ -55,6 +60,11 @@
 			</li>
 			<li>
 				<a href="http://ehalter.com/projets.html">Projets</a>
+				<ul>
+					<li><a href="http://ehalter.com/interets.html">Professionnels</a></li>
+					<li><a href="http://ehalter.com/interets.html">HappiWork Plan</a></li>
+					<li><a href="http://ehalter.com/interets.html">Futurs</a></li>
+				</ul>
 			</li>
 			<li>
 				<a href="http://ehalter.com/contact.html">Contact</a>
