update v2 interest et project

--- a/fr v2/amis.html
+++ b/fr v2/amis.html
@@ -53,15 +53,15 @@
 				<a href="http://ehalter.com/interets.html">Interets</a>
 				<ul>
 					<li><a href="http://ehalter.com/interets.html">Histoire</a></li>
-					<li><a href="http://ehalter.com/interets.html">Voyages</a></li>
-					<li><a href="http://ehalter.com/interets.html">Sports</a></li>
+					<li><a href="http://ehalter.com/interets.html">Voyage</a></li>
+					<li><a href="http://ehalter.com/interets.html">Sport</a></li>
 					<li><a href="http://ehalter.com/interets.html">Recrutement</a></li>
 				</ul>
 			</li>
 			<li>
 				<a href="http://ehalter.com/projets.html">Projets</a>
 				<ul>
-					<li><a href="http://ehalter.com/interets.html">Professionnels</a></li>
+					<li><a href="http://ehalter.com/interets.html">Pros</a></li>
 					<li><a href="http://ehalter.com/interets.html">HappiWork Plan</a></li>
 					<li><a href="http://ehalter.com/interets.html">Futurs</a></li>
 				</ul>
