--- a/fr v2/apropos.html
+++ b/fr v2/apropos.html
@@ -64,10 +64,18 @@
 	</p>
 	<p>Parcequ'il n'y a pas que le <strong>JAVA</strong> dans la vie, ce site a &eacute;t&eacute; d&eacute;velopp&eacute; avec : </p>
 	<img alt="technologies" src="icon/html5_css3_jQuery_slogo.png"/>
+	<p>
+		L'image de la section "Apports" ainsi que mon cartoCV ont été crée grâce aux logiciels de MindMapping 
+		<a href="http://www.mindomo.com/">Mindomo</a> et <a href="http://www.mindjet.com/">Mindjet</a>.
+	</p>
+	<p>
+		La page "Voyage" intègre en javascript l'excellente 
+		<a href="https://developers.google.com/maps/documentation/javascript/tutorial?hl=fr">API Google Maps</a> ainsi que la nouvelle version de cet outil. 		
+	</p>
 	<p>Le formulaire de contact a &eacute;t&eacute; cr&eacute;e gr&acirc;ce &agrave; 
-	<a href="http://posabsolute.github.io/jQuery-Validation-Engine/">Form Validator Engine</a>
-	et les graphiques de ma page de profil gr&acirc;ce &agrave; 
-	<a href="http://www.rgraph.net/">RGraph</a>
+		<a href="http://posabsolute.github.io/jQuery-Validation-Engine/">Form Validator Engine</a>
+		et les graphiques de ma page de profil gr&acirc;ce &agrave; 
+		<a href="http://www.rgraph.net/">RGraph</a>
 	</p>
 	<p>
 		La retouche des ic&ocirc;nes et images a &eacute;t&eacute; faite via GIMP 2 et icon Craft
