--- a/fr v2/futur.html
+++ b/fr v2/futur.html
@@ -60,7 +60,7 @@
 	<h1>Projets futurs</h1>
 	<article>
 		<p>Bien que junior sur le marché du travail, j'ai déjà une bonne idée dans la voie sur laquelle je veux m'orienter à moyen terme (&asymp; 3/4 ans).</p>
-		<p>Voici les deux axes sur lesquels je veux partir.</p>
+		<p>Evidemment je ne peux savoir ce que me réserve l'avenir mais voici les deux axes que j'aimerai développer.</p>
 	</article>
 	<section>
 		<img alt="Business Analyste" src="images/banalyst.png"/>
