--- a/fr v2/missions.html
+++ b/fr v2/missions.html
@@ -7,10 +7,10 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Histoire | Emmanuel HALTER
+			  Missions | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/histoire.css">
-		<link rel="icon" type="image/png" href="icon/favicon.png"/>
+		<link rel="stylesheet" type="text/css" href="css/missions.css">
+		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
 <body>
@@ -29,15 +29,15 @@
 		</section>
 	</div>
 	<div class="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/amis.html">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/projets.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/friends.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/project.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
 	</div>
 	<nav>
-		<ul id="menu-ul">
+		<ul>
 			<li>
 				<a href="http://ehalter.com">Accueil</a>
 			</li>
@@ -46,12 +46,6 @@
 			</li>
 			<li>
 				<a href="http://ehalter.com/interets.html">Interets</a>
-				<ul>
-					<li><a href="http://ehalter.com/interets.html">Histoire</a></li>
-					<li><a href="http://ehalter.com/interets.html">Voyages</a></li>
-					<li><a href="http://ehalter.com/interets.html">Sports</a></li>
-					<li><a href="http://ehalter.com/interets.html">Recrutement</a></li>
-				</ul>
 			</li>
 			<li>
 				<a href="http://ehalter.com/projets.html">Projets</a>
@@ -63,16 +57,38 @@
 	</nav>	
 </header>
 <div class="content">
-	<article>
+	<section id="pro">
+		<h1>Mission actuelle</h1>
+		<article>
+			<h2>Participation à ....</h2>
+			<p>x mois pour y </p>
+			<p>Activités principales : </p>
+			<ul>
+				<li>tâche 1</li>
+				<li>tâche 1</li>
+				<li>tâche 1</li>
+				<li>tâche 1</li>
+			</ul>
+		</article>
+	</section>
+	<section id="personal">
+		<h1>Mission annexe</h1>
+		<article>
+			<h2>SI & Projet : Quelles priorit&eacute;s ?</h2>
 						<p>
-							Passionn&eacute; d'Histoire depuis mon plus jeune &acirc;ge, j'aime d&eacute;couvrir <strong>l'&eacute;volution</strong> <br> de l'Homme et de la plan&egrave;te &agrave; travers les si&egrave;cles. 
-							C'est pour moi l'opportunit&eacute; de <strong>connaitre</strong> notre pass&eacute;.
+							Avec mon exp&eacute;rience au sein du milieu bancaire et de la migration d'un SI, 
+							j'ai compris que <strong>la complexit&eacute; d'un SI</strong> et d'un projet avait une <strong>influence</strong> sur l'aspect <strong>technique</strong> et <strong>fonctionnel</strong>.
 						</p>
 						<p>
-							Depuis 10 ans je suis sp&eacute;cialis&eacute; dans la 2nd Guerre mondiale, dernier grand conflit de l'&egrave;re humaine. 
-							C'est un l&eacute;ger <strong>tribut</strong> &agrave; ces personnes dont le sacrifice a conduit &agrave; la <strong>libert&eacute;</strong>.
+							Je voulais donc <strong>comprendre</strong> dans quelle mesure et <strong>comment</strong> cette influence &eacute;tait possible.
+							A travers ma jeune exp&eacute;rience et mon analyse, j'ai voulu <strong>r&eacute;pondre &agrave; ces questions</strong>.
 						</p>
-	</article>
+						<p>
+							Ma r&eacute;flexion <strong>&eacute;voluera</strong> avec mon exp&eacute;rience<br>
+							Vous pouvez retrouver mes premi&egrave;res r&eacute;ponses <a href="http://ehalter.com/blog/data/documents/R_METIERS_SI.pdf">ici</a>.
+						</p>
+		</article>
+	</section>
 </div>
 <footer>
 		<section id="footerbox-network">
