--- a/fr v2/recrutement.html
+++ b/fr v2/recrutement.html
@@ -7,10 +7,10 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Histoire | Emmanuel HALTER
+			  Ressources Humaines | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/histoire.css">
-		<link rel="icon" type="image/png" href="icon/favicon.png"/>
+		<link rel="stylesheet" type="text/css" href="css/recrutement.css">
+		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
 <body>
@@ -29,15 +29,15 @@
 		</section>
 	</div>
 	<div class="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/amis.html">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/interets.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/friends.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/interest.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
 	</div>
 	<nav>
-		<ul id="menu-ul">
+		<ul>
 			<li>
 				<a href="http://ehalter.com">Accueil</a>
 			</li>
@@ -46,12 +46,6 @@
 			</li>
 			<li>
 				<a href="http://ehalter.com/interets.html">Interets</a>
-				<ul>
-					<li><a href="http://ehalter.com/interets.html">Histoire</a></li>
-					<li><a href="http://ehalter.com/interets.html">Voyages</a></li>
-					<li><a href="http://ehalter.com/interets.html">Sports</a></li>
-					<li><a href="http://ehalter.com/interets.html">Recrutement</a></li>
-				</ul>
 			</li>
 			<li>
 				<a href="http://ehalter.com/projets.html">Projets</a>
@@ -64,15 +58,24 @@
 </header>
 <div class="content">
 	<article>
-						<p>
-							Passionn&eacute; d'Histoire depuis mon plus jeune &acirc;ge, j'aime d&eacute;couvrir <strong>l'&eacute;volution</strong> <br> de l'Homme et de la plan&egrave;te &agrave; travers les si&egrave;cles. 
-							C'est pour moi l'opportunit&eacute; de <strong>connaitre</strong> notre pass&eacute;.
-						</p>
-						<p>
-							Depuis 10 ans je suis sp&eacute;cialis&eacute; dans la 2nd Guerre mondiale, dernier grand conflit de l'&egrave;re humaine. 
-							C'est un l&eacute;ger <strong>tribut</strong> &agrave; ces personnes dont le sacrifice a conduit &agrave; la <strong>libert&eacute;</strong>.
-						</p>
+			<p>
+				Depuis mes recherches de travail, j'attache une grande importance &agrave; à connaitre le monde des ressources humaines ainsi que <strong>les m&eacute;thodes employ&eacute;es</strong>. 
+			</p>
+			<p>
+				Cela me permet de <strong>comprendre le march&eacute;</strong> du travail et d'avoir toutes les cl&eacute;s en main pour mon parcours professionnel.
+			</p>
+			<h1>Je m'intéresse particulièrement à : </h1>
+			<ul>
+				<li>Maitriser les réseaux professionnels</li>
+				<li>Préparer et réussir des entretiens</li>
+				<li>Savoir comment les recherches de travail s'effectuent</li>
+				<li>Suivre les avancées en manière de recrutement</li>
+				<li>Comprendre les comportements des personnes au sein d'une entreprise</li>
+				<li>Perfectionner mes compétences en communication</li>
+			</ul>
 	</article>
+	<img id="networking" alt="networking" src="images/network.png"/>
+	<img id="comm" alt="communication" src="images/fcv.png"/>
 </div>
 <footer>
 		<section id="footerbox-network">
@@ -102,6 +105,6 @@
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script src="js/myJScript.js"></script>	
+<script src="js/myJScript.js"></script>
 </body>
 </html>
