--- a/fr v2/sports.html
+++ b/fr v2/sports.html
@@ -64,6 +64,14 @@
 </header>
 <div class="content">
 	<h1>Sports</h1>
+	<article>
+						<p>
+						<strong>Le contr&ocirc;le de soi</strong>, le d&eacute;passement, <strong>le respect de l'autre</strong>, la d&eacute;termination et <strong>l'&eacute;quilibre physique</strong> sont des valeurs qui font que le sport prend une place particuli&egrave;re dans ma vie. 
+						</p>
+						<p>
+							Bien plus qu'une simple pratique, faire du sport est &agrave; mon sens un <strong>mode de vie</strong>. 
+						</p>
+	</article>
 	<video id="videoSport" controls>
 		<source src="test/test.ogv" type='video/ogg; codecs="theora, vorbis"'/>
 		<source src="test/test.webm" type='video/webm' >
