--- a/fr v2/voyages.html
+++ b/fr v2/voyages.html
@@ -64,9 +64,15 @@
 	</nav>	
 </header>
 <div class="content" >
-	<section id="talk">
-	<p>J'essaye de voyager et decouvrir une nouvelle destination tous les 3 mois</p>
-	</section>
+	<article>
+							<p>
+								Ma passion pour l'Histoire m'a amen&eacute; &agrave; voyager. En tant que <strong>citoyen du monde</strong> le visiter est quelque chose d'important &agrave; mes yeux.
+							</p>
+							<p>
+								<strong>D&eacute;couvrir</strong> de nouvelles cultures, avoir une autre <strong>vision du monde</strong> et <strong>&eacute;changer</strong> avec les personnes sont un pas de plus vers <strong>l'ouverture d'esprit</strong>.
+							</p>
+							<p>Selon mes moyens je planifie de voyager et découvrir une nouvelle destination <strong>tous les 3 mois</strong>. Qu'elle soit proche ou lointaine, <strong>l'aventure est au bas de notre porte !</strong></p>
+	</article>
 	<section id="map">
 	</section>
 </div>
