update v2 page histoire

--- a/fr v2/apports.html
+++ b/fr v2/apports.html
@@ -3,8 +3,6 @@
 <!--[if IE 9 ]><html lang="fr" class="no-js ie9"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
 
-<!-- Main Values / Apport pro / Apport perso -->
-
 <html lang="fr">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
@@ -89,17 +87,6 @@
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script src="js/profil.js"></script>
-<script src="js/RGraph/libraries/RGraph.common.core.js"></script>
-		<script src="js/RGraph/libraries/RGraph.common.dynamic.js"></script>   <!-- Just needed for dynamic features (eg tooltips) -->
-
-		<script src="js/RGraph/libraries/RGraph.common.annotate.js"></script>  <!-- Just needed for annotating -->
-		<script src="js/RGraph/libraries/RGraph.common.context.js"></script>   <!-- Just needed for context menus -->
-		<script src="js/RGraph/libraries/RGraph.common.effects.js"></script>   <!-- Just needed for visual effects -->
-		<script src="js/RGraph/libraries/RGraph.common.key.js"></script>       <!-- Just needed for keys -->
-		<script src="js/RGraph/libraries/RGraph.common.resizing.js"></script>  <!-- Just needed for resizing -->
-		<script src="js/RGraph/libraries/RGraph.common.tooltips.js"></script>  <!-- Just needed for tooltips -->
-		<script src="js/RGraph/libraries/RGraph.common.zoom.js"></script>   
-		<script src="js/RGraph/libraries/RGraph.radar.js"></script>  	
+<script src="js/myJScript.js"></script>	
 </body>
 </html>
