--- a/fr v2/histoire.html
+++ b/fr v2/histoire.html
@@ -64,15 +64,22 @@
 </header>
 <div class="content">
 	<article>
-						<p>
-							Passionn&eacute; d'Histoire depuis mon plus jeune &acirc;ge, j'aime d&eacute;couvrir <strong>l'&eacute;volution</strong> <br> de l'Homme et de la plan&egrave;te &agrave; travers les si&egrave;cles. 
-							C'est pour moi l'opportunit&eacute; de <strong>connaitre</strong> notre pass&eacute;.
-						</p>
-						<p>
-							Depuis 10 ans je suis sp&eacute;cialis&eacute; dans la 2nd Guerre mondiale, dernier grand conflit de l'&egrave;re humaine. 
-							C'est un l&eacute;ger <strong>tribut</strong> &agrave; ces personnes dont le sacrifice a conduit &agrave; la <strong>libert&eacute;</strong>.
-						</p>
+	<h1>Opération Storylight</h1>
+	<p>L'ennemi a envoyé des espions dans le passé pour changer le cours du conflit et plus encore. Vous devez <strong>absolument les neutraliser</strong>.<p>
+	<p>Par conséquent, demain vous sauterez sur <strong>l'Histoire</strong>. Vous serez en terres inconnues entourés d'anciens peuples et espèces. Soyez prudent.
+	Heureusement, les Hommes sous vos ordres sont des experts. Ils sont biens entrainés, curieux et n'ont qu'un rêve : la connaissance. </p>
+	<p>Vous retrouverez les détails de l'opération en <strong>consultant le dossier sur votre table de briefing.</strong></p>
+	<p>Bonne chance Commandant !</p>
 	</article>
+	<map name="mbriefing">
+		<img id="history" src="images/ww2/history.png"/>
+		<a href="#">
+			<img id="sfiles" alt="sfiles" src="images/ww2/sfiles.png"/>
+		</a>
+		<a target="_blank" href="http://www.39-45.org/portailv2/news/news.php">
+			<img id="boussole" alt="boussole" src="images/ww2/boussole.png"/>
+		</a>
+	</map>
 </div>
 <footer>
 		<section id="footerbox-network">
@@ -103,5 +110,18 @@
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
 <script src="js/myJScript.js"></script>	
+<script type="text/javascript" src="js/reveal.js"></script>
+<div id="myModal" class="reveal-modal">
+		 <h1>Ordre du jour</h1>
+		 <p>
+			Passionn&eacute; d'Histoire depuis mon plus jeune &acirc;ge, j'aime d&eacute;couvrir <strong>l'&eacute;volution</strong> <br> de l'Homme et de la plan&egrave;te &agrave; travers les si&egrave;cles. 
+			C'est pour moi l'opportunit&eacute; de <strong>connaitre</strong> notre pass&eacute;.
+		</p>
+		<p>
+			Depuis <strong>10 ans</strong> je suis <strong>sp&eacute;cialis&eacute;</strong> dans la <strong>2nd Guerre mondiale</strong>, dernier grand conflit de l'&egrave;re humaine. 
+			C'est un l&eacute;ger <strong>tribut</strong> &agrave; ces personnes dont le sacrifice a conduit &agrave; la <strong>libert&eacute;</strong>.
+		</p>
+		<a class="close-reveal-modal">&#215;</a>
+</div>
 </body>
 </html>
