--- a/fr v2/cv.html
+++ b/fr v2/cv.html
@@ -59,23 +59,23 @@
 <div class="content">
 		<h1>Choisissez votre support</h1>
 		<section id="cv">
-				<ol>
-					<li>
-						<h2>CV traditionnel</h2>
-						<article>
-							<a href="http://ehalter.com/cv.pdf" title="CV traditionnel" onclick="window.open(this.href);return false">
-								<img id="cv_fr" alt="cv" src="images/cv_fr.png"/>
-							</a>
-						</article>
-					</li>
-					<li>
-						<h2>CartoCV</h2>
-						<article>
-							<a href="http://www.mindomo.com/view.htm?m=99bebe0863882b7b86207f2face5a197" title="CartoCV" onclick="window.open(this.href);return false">
-								<img id="cartoCV" alt="cartoCV" src="images/cartoCV.png"/>
-							</a>
-						</article>
-					</li>
+			<ol>
+				<li>
+					<h2>CV traditionnel</h2>
+					<article>
+						<a href="http://ehalter.com/cv.pdf" title="CV traditionnel" onclick="window.open(this.href);return false">
+							<img id="cv_fr" alt="cv" src="images/cv_fr.png"/>
+						</a>
+					</article>
+				</li>
+				<li>
+					<h2>CartoCV</h2>
+					<article>
+						<a href="http://www.mindomo.com/view.htm?m=99bebe0863882b7b86207f2face5a197" title="CartoCV" onclick="window.open(this.href);return false">
+							<img id="cartoCV" alt="cartoCV" src="images/cartoCV.png"/>
+						</a>
+					</article>
+				</li>
 				</ol>
 			<img id="vs" alt="versus" src="images/vs.png"/>
 		</section>
@@ -108,17 +108,6 @@
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script src="js/profil.js"></script>
-<script src="js/RGraph/libraries/RGraph.common.core.js"></script>
-		<script src="js/RGraph/libraries/RGraph.common.dynamic.js"></script>   <!-- Just needed for dynamic features (eg tooltips) -->
-
-		<script src="js/RGraph/libraries/RGraph.common.annotate.js"></script>  <!-- Just needed for annotating -->
-		<script src="js/RGraph/libraries/RGraph.common.context.js"></script>   <!-- Just needed for context menus -->
-		<script src="js/RGraph/libraries/RGraph.common.effects.js"></script>   <!-- Just needed for visual effects -->
-		<script src="js/RGraph/libraries/RGraph.common.key.js"></script>       <!-- Just needed for keys -->
-		<script src="js/RGraph/libraries/RGraph.common.resizing.js"></script>  <!-- Just needed for resizing -->
-		<script src="js/RGraph/libraries/RGraph.common.tooltips.js"></script>  <!-- Just needed for tooltips -->
-		<script src="js/RGraph/libraries/RGraph.common.zoom.js"></script>   
-		<script src="js/RGraph/libraries/RGraph.radar.js"></script>  	
+<script src="js/myJScript.js"></script>
 </body>
 </html>
