update html & css nav

--- a/fr v2/amis.html
+++ b/fr v2/amis.html
@@ -15,19 +15,19 @@
 </head>
 <body>
 <header>
-	<div class="header-left">
+	<section id="header-left">
 		<a title="Accueil" href="http://ehalter.com">
 			<img alt="Emmanuel Halter" src="images/title.png"/>
 		</a>
-		<section>
+		<div>
 			<blockquote>
 				<h1>
 					<span class='message'></span>
 				</h1>
 			</blockquote>
 			<h2 class="source"></h2>			
-		</section>
-	</div>
+		</div>
+	</section>
 	<div class="header-right">
 		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/amis.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
@@ -50,7 +50,7 @@
 				</ul>
 			</li>
 			<li>
-				<a href="http://ehalter.com/interets.html">Interets</a>
+				<a href="http://ehalter.com/interets.html">Intérêts</a>
 				<ul>
 					<li><a href="http://ehalter.com/interets.html">Histoire</a></li>
 					<li><a href="http://ehalter.com/interets.html">Voyage</a></li>
@@ -61,7 +61,7 @@
 			<li>
 				<a href="http://ehalter.com/projets.html">Projets</a>
 				<ul>
-					<li><a href="http://ehalter.com/interets.html">Pros</a></li>
+					<li><a href="http://ehalter.com/interets.html">Mission</a></li>
 					<li><a href="http://ehalter.com/interets.html">HappiWork Plan</a></li>
 					<li><a href="http://ehalter.com/interets.html">Futurs</a></li>
 				</ul>
