--- a/fr v2/recrutement.html
+++ b/fr v2/recrutement.html
@@ -15,40 +15,56 @@
 </head>
 <body>
 <header>
-	<div class="header-left">
+	<section id="header-left">
 		<a title="Accueil" href="http://ehalter.com">
 			<img alt="Emmanuel Halter" src="images/title.png"/>
 		</a>
-		<section>
+		<div>
 			<blockquote>
 				<h1>
 					<span class='message'></span>
 				</h1>
 			</blockquote>
 			<h2 class="source"></h2>			
-		</section>
-	</div>
-	<div class="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/interets.html">
+		</div>
+	</section>
+	<section id="header-right">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/profil.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/interest.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/profile.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
-	</div>
+	</section>
 	<nav>
-		<ul>
+		<ul id="menu">
 			<li>
 				<a href="http://ehalter.com">Accueil</a>
 			</li>
 			<li>
 				<a href="http://ehalter.com/profil.html">Profil</a>
+				<ul>
+					<li><a href="http://ehalter.com/interets.html">CV</a></li>
+					<li><a href="http://ehalter.com/interets.html">Compétences principales</a></li>
+					<li><a href="http://ehalter.com/interets.html">Apports</a></li>
+				</ul>
 			</li>
 			<li>
-				<a href="http://ehalter.com/interets.html">Interets</a>
+				<a href="http://ehalter.com/interets.html">Intérêts</a>
+				<ul>
+					<li><a href="http://ehalter.com/interets.html">Histoire</a></li>
+					<li><a href="http://ehalter.com/interets.html">Voyage</a></li>
+					<li><a href="http://ehalter.com/interets.html">Sport</a></li>
+					<li><a href="http://ehalter.com/interets.html">Recrutement</a></li>
+				</ul>
 			</li>
 			<li>
 				<a href="http://ehalter.com/projets.html">Projets</a>
+				<ul>
+					<li><a href="http://ehalter.com/interets.html">Mission</a></li>
+					<li><a href="http://ehalter.com/interets.html">HappiWork Plan</a></li>
+					<li><a href="http://ehalter.com/interets.html">Futurs</a></li>
+				</ul>
 			</li>
 			<li>
 				<a href="http://ehalter.com/contact.html">Contact</a>
