--- a/fr v2/cv.html
+++ b/fr v2/cv.html
@@ -37,18 +37,34 @@
 		</a>
 	</section>
 	<nav>
-		<ul>
+		<ul id="menu">
 			<li>
 				<a href="http://ehalter.com">Accueil</a>
 			</li>
 			<li>
 				<a href="http://ehalter.com/profil.html">Profil</a>
+				<ul>
+					<li><a href="http://ehalter.com/interets.html">CV</a></li>
+					<li><a href="http://ehalter.com/interets.html">Compétences</a></li>
+					<li><a href="http://ehalter.com/interets.html">Apports</a></li>
+				</ul>
 			</li>
 			<li>
-				<a href="http://ehalter.com/interets.html">Interets</a>
+				<a href="http://ehalter.com/interets.html">Intérêts</a>
+				<ul>
+					<li><a href="http://ehalter.com/interets.html">Histoire</a></li>
+					<li><a href="http://ehalter.com/interets.html">Voyage</a></li>
+					<li><a href="http://ehalter.com/interets.html">Sport</a></li>
+					<li><a href="http://ehalter.com/interets.html">Recrutement</a></li>
+				</ul>
 			</li>
 			<li>
 				<a href="http://ehalter.com/projets.html">Projets</a>
+				<ul>
+					<li><a href="http://ehalter.com/interets.html">Mission</a></li>
+					<li><a href="http://ehalter.com/interets.html">HappiWork Plan</a></li>
+					<li><a href="http://ehalter.com/interets.html">Futurs</a></li>
+				</ul>
 			</li>
 			<li>
 				<a href="http://ehalter.com/contact.html">Contact</a>
